Fix text overflow

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 .loadedText{
     border-radius: 10px;
     width: max-content;
+    max-width: 90%;
     height: max-content;
     padding: 5px;
     line-height: 1.5;
